--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "tsc"
   },
   "dependencies": {
-    "discord.js": "^14.17.3"
+    "discord.js": "^14.14.1",
+    "dotenv": "^16.4.7",
+    "mysql2": "^3.12.0",
+    "sequelize": "^6.37.5"
   },
   "devDependencies": {
     "typescript": "^5.5.3"
