--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.7",
     "mysql2": "^3.12.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
     "typescript": "^5.5.3"
