--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,6 @@ DATABASE_PORT=3306
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=password123
 DATABASE_NAME=discordbot
+
+COMMISSIONS_CHANNEL_ID=12345
+COMMISSIONS_DEV_ROLE_ID=12345
