--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "start": "tsx ./src/index.ts"
   },
   "dependencies": {
     "discord.js": "^14.14.1",
-    "dotenv": "^16.4.7",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5",
+    "toml": "^3.0.0",
     "tsx": "^4.19.2"
   },
   "devDependencies": {
