Added the new environment variable COMMISSIONS_GUILD_ID

--- a/config.template.toml
+++ b/config.template.toml
@@ -7,6 +7,7 @@ DATABASE_USERNAME="root"
 DATABASE_PASSWORD="password123"
 DATABASE_NAME="discordbot"
 
+COMMISSIONS_GUILD_ID="12345"
 COMMISSIONS_CHANNEL_ID="12345"
 COMMISSIONS_DEV_ROLE_ID="12345"
 DEFAULT_ROLE_IDS="roleId1,roleId2"
