--- a/config.template.toml
+++ b/config.template.toml
@@ -1,13 +1,19 @@
+[DiscordBot]
 DISCORD_BOT_ID="discord-client-id"
 DISCORD_BOT_SECRET="discord-client-secret"
 
+[DiscordServer]
+COMMISSIONS_GUILD_ID="12345"
+COMMISSIONS_CHANNEL_ID="12345"
+COMMISSIONS_DEV_ROLE_ID="12345"
+DEFAULT_ROLE_IDS="roleId1,roleId2"
+
+[Database]
 DATABASE_HOST="localhost"
 DATABASE_PORT=3306
 DATABASE_USERNAME="root"
 DATABASE_PASSWORD="password123"
 DATABASE_NAME="discordbot"
 
-COMMISSIONS_GUILD_ID="12345"
-COMMISSIONS_CHANNEL_ID="12345"
-COMMISSIONS_DEV_ROLE_ID="12345"
-DEFAULT_ROLE_IDS="roleId1,roleId2"
+[StorePage]
+StorePagePort=3000
