--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "tsx ./src/index.ts"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
     "discord.js": "^14.14.1",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5",
@@ -15,6 +16,8 @@
     "tsx": "^4.19.2"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
+    "express": "^4.21.2",
     "typescript": "^5.5.3"
   },
   "private": true
