Implemented verification and also wrote out the server and the other tables for the purchases

--- a/config.template.toml
+++ b/config.template.toml
@@ -15,5 +15,6 @@ DATABASE_USERNAME="root"
 DATABASE_PASSWORD="password123"
 DATABASE_NAME="discordbot"
 
-[StorePage]
+[KofiStore]
 StorePagePort=3000
+StoreVerificationToken = 'Insert verification token'
